replace gif to svf

--- a/package/mtk/applications/5g-modem/rooter/0optionalapps/ext-rspeedtest/files/usr/lib/lua/luci/view/speedtest/rspeedtest.htm
+++ b/package/mtk/applications/5g-modem/rooter/0optionalapps/ext-rspeedtest/files/usr/lib/lua/luci/view/speedtest/rspeedtest.htm
@@ -2,7 +2,7 @@
 <%
 	user_icon = resource .. "/img/user.png"
 	prov_icon = resource .. "/img/prov.png"
-	load_icon = resource .. "/icons/loading.gif"
+	load_icon = resource .. "/icons/loading.svg"
 %>
 
 <script type="text/javascript" src="<%=resource%>/xhr.js"></script>
