--- a/package/mtk/applications/luci-app-mtk/luasrc/view/admin_mtk/mtk_wifi_apcli.htm
+++ b/package/mtk/applications/luci-app-mtk/luasrc/view/admin_mtk/mtk_wifi_apcli.htm
@@ -60,7 +60,7 @@ var waiting_count = 0;
 </script>
 
 <div class="alert-message" id="BusyText_ApCli" style="display:none;">
-    <img src="<%=resource%>/icons/loading.gif" alt="" style="vertical-align:middle" />
+    <img src="<%=resource%>/icons/loading.svg" alt="" style="vertical-align:middle" />
     <big><strong><%:Please wait while the request is being processed.%></strong></big>
 </div>
 <div id="apcli_body_div">
