--- a/package/mtk/applications/luci-app-mtk/luasrc/view/admin_mtk/mtk_wifi_loading.htm
+++ b/package/mtk/applications/luci-app-mtk/luasrc/view/admin_mtk/mtk_wifi_loading.htm
@@ -10,7 +10,7 @@ local url = "/"..table.concat(request,'/',5)
 %>
 <h2><%:Wireless%></h2>
 <div class="alert-message" id="BusyMsg">
-    <img src="<%=resource%>/icons/loading.gif" alt="" style="vertical-align:middle" />
+    <img src="<%=resource%>/icons/loading.svg" alt="" style="vertical-align:middle" />
     <big><strong><%:Please wait while the settings are being applied.%></strong></big>
 </div>
 <div class="alert-message error" id="TimeoutMsgDiv" style="display:none">
