--- a/package/mtk/applications/luci-app-mtk/luasrc/view/admin_mtk/mtk_wifi_vif_cfg.htm
+++ b/package/mtk/applications/luci-app-mtk/luasrc/view/admin_mtk/mtk_wifi_vif_cfg.htm
@@ -116,7 +116,7 @@ function hi(to, devname, vifname)
             <%end%>
         </h2>
         <div class="alert-message" id="BusyText_VIF" style="display:none;">
-            <img src="<%=resource%>/icons/loading.gif" alt="" style="vertical-align:middle" />
+            <img src="<%=resource%>/icons/loading.svg" alt="" style="vertical-align:middle" />
             <big><strong><%:Please wait while the request is being processed.%></strong></big>
         </div>
         <ul class="cbi-tabmenu">
