replace png to svg

--- a/package/mtk/applications/5g-modem/rooter/0optionalapps/ext-rspeedtest/files/usr/lib/lua/luci/view/speedtest/rspeedtest.htm
+++ b/package/mtk/applications/5g-modem/rooter/0optionalapps/ext-rspeedtest/files/usr/lib/lua/luci/view/speedtest/rspeedtest.htm
@@ -1,7 +1,7 @@
 <%+header%>
 <%
-	user_icon = resource .. "/img/user.png"
-	prov_icon = resource .. "/img/prov.png"
+	user_icon = resource .. "/img/user.svg"
+	prov_icon = resource .. "/img/prov.svg"
 	load_icon = resource .. "/icons/loading.svg"
 %>
 
