--- a/package/mtk/applications/5g-modem/rooter/ext-rooter-basic/files/www/luci-static/css/cascade.css
+++ b/package/mtk/applications/5g-modem/rooter/ext-rooter-basic/files/www/luci-static/css/cascade.css
@@ -301,7 +301,7 @@ hr {
 	height: 101vh;
 	left: 0;
 	top: 0;
-	background-image: url(../img/blank.png);
+	background-image: url(../img/blank.svg);
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
